samples/_failures_safe/1761244353_83f8ae_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c83c81d9.c: In function ‘print_tokens’:
./samples/SAFE/__tmp_c83c81d9.c:171:13: error: expected expression at end of input
  171 |             case
      |             ^~~~
./samples/SAFE/__tmp_c83c81d9.c:171:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c83c81d9.c:171:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c83c81d9.c:171:13: error: expected declaration or statement at end of input
